fix(authentication-error): remove after each, add auth check in before each, fix login screen on mobile size, remove one mo variable

--- a/fe/src/pages/login/login.scss
+++ b/fe/src/pages/login/login.scss
@@ -6,6 +6,10 @@
     box-shadow: 15px 15px 15px 0px rgba(90, 90, 90, 0.75);
     background-color: #fff;
 
+    @include media-breakpoint-down(sm) {
+        margin: 3rem auto 0 auto;
+    }
+
     header {
         background-color: $mainColor;
         border-radius: 4px 4px 0 0;
